--- a/layers/roads.yaml
+++ b/layers/roads.yaml
@@ -702,7 +702,7 @@ styles:
 
     pier-overlay:
         base: lines
-        #blend: overlay
+        blend: overlay
 
     ferry-overlay:
         base: lines
