--- a/components/globals.yaml
+++ b/components/globals.yaml
@@ -186,19 +186,20 @@ global:
     text_visible_neighbourhoods: true
     text_visible_neighbourhoods_e: true
     text_visible_water: true
+    text_visible_water_labels: true
     text_visible_roads: true
     text_visible_buildings: true
     text_visible_addresses: true
     label_visible_landuse_green: true
     icon_visible_landuse_green: true
     text_visible_landuse_green: true
-    label_visible_poi_landuse: true
-    icon_visible_poi_landuse: true
-    text_visible_poi_landuse: true
+    label_visible_poi_landuse: true        #false by default
+    icon_visible_poi_landuse: true         #false by default
+    text_visible_poi_landuse: true         #false by default
     label_visible_poi_landuse_e: true
     icon_visible_poi_landuse_e: true
     text_visible_poi_landuse_e: true
-    text_visible_landuse_generic: true
+    text_visible_landuse_generic: true     #false by default
     label_visible_station: true
     icon_visible_station: true
     text_visible_station: true
@@ -208,6 +209,7 @@ global:
     text_visible_shields: true
     text_visible_exits: true
     label_visible_poi_landuse: true
+
 
     # SHIELDS
     sdk_shield_color: [1.000,0.855,0.365]
