split boundaries labels into separate file

--- a/tron-style.yaml
+++ b/tron-style.yaml
@@ -22,6 +22,7 @@ import:
     - layers/landuse.yaml
     - layers/landuse-labels.yaml
     - layers/boundaries.yaml
+    - layers/boundaries-labels.yaml
     - layers/places.yaml
     - layers/pois.yaml
     - layers/ux-sdk-overlay.yaml
