remove data sourcing for labels layers

--- a/layers/landuse-labels.yaml
+++ b/layers/landuse-labels.yaml
@@ -1,6 +1,6 @@
 layers:
+    # tuck this into existing landuse layer
     landuse:
-        data: { source: mapzen }
         landuse-labels:
             filter:
                 all:
