--- a/layers/water.yaml
+++ b/layers/water.yaml
@@ -174,13 +174,13 @@ styles:
                 SHIMMERING_BACKGROUND_COLOR: vec3(0.03,0.05,0.07)
                 SHIMMERING_SPEED: .5
                 SHIMMERING_AMOUNT: .1+zoom()*.9
-                SHIMMERING_ANIMATED: global.animated
+                SHIMMERING_ANIMATED: global.sdk_animated
     water-boundaries-animated:
         base: lines
         mix: [lines-coast]
         shaders:
             defines:
-                COAST_WAVES_ANIMATED: global.animated
+                COAST_WAVES_ANIMATED: global.sdk_animated
     swimming-pool-glow:
         base: lines
         mix: [lines-glow]
