--- a/tron-style.yaml
+++ b/tron-style.yaml
@@ -108,6 +108,6 @@ cameras:
         type: perspective
 
 scene:
-    animated: global.animated
+    animated: global.sdk_animated
     background:
         color: black
