--- a/layers/ux-sdk-overlay.yaml
+++ b/layers/ux-sdk-overlay.yaml
@@ -28,7 +28,7 @@ layers:
         data: { source: mz_current_location }
         draw:
             ux-location-gem-overlay:
-                interactive: true
+                interactive: global.sdk_interactive
                 sprite: ux-current-location
                 size: 36px
                 collide: false
@@ -37,7 +37,7 @@ layers:
         data: { source: mz_route_location }
         draw:
             ux-location-gem-overlay:
-                interactive: true
+                interactive: global.sdk_interactive
                 sprite: ux-route-arrow
                 size: [60px,60px]
                 collide: false
@@ -46,7 +46,7 @@ layers:
         data: { source: mz_route_start }
         draw:
             ux-icons-overlay:
-                interactive: true
+                interactive: global.sdk_interactive
                 priority: 1
                 sprite: ux-route-start
                 size: [36px,46px]
@@ -57,7 +57,7 @@ layers:
         data: { source: mz_route_destination }
         draw:
             ux-icons-overlay:
-                interactive: true
+                interactive: global.sdk_interactive
                 priority: 1
                 sprite: ux-route-stop
                 size: [36px,46px]
@@ -68,7 +68,7 @@ layers:
         data: { source: mz_route_transit_stop }
         draw:
             ux-icons-overlay:
-                interactive: true
+                interactive: global.sdk_interactive
                 sprite: ux-transit-stop
                 size: [15px,15px]
                 collide: false
@@ -77,7 +77,7 @@ layers:
         data: { source: mz_search_result }
         draw:
             ux-icons-overlay:
-                interactive: true
+                interactive: global.sdk_interactive
                 sprite: ux-search-active
                 size: [36px,54px]
                 collide: false
@@ -92,7 +92,7 @@ layers:
         data: { source: mz_dropped_pin }
         draw:
             ux-icons-overlay:
-                interactive: true
+                interactive: global.sdk_interactive
                 sprite: ux-search-active
                 size: [36px,54px]
                 collide: false
@@ -104,7 +104,7 @@ layers:
         data: { source: mz_default_point }
         draw:
             sdk-point-overlay:
-                interactive: true
+                interactive: global.sdk_interactive
                 sprite: ux-search-active
                 size: [36px,54px]
                 collide: false
@@ -114,7 +114,7 @@ layers:
         data: { source: mz_default_shield }
         draw:
             sdk-shield-overlay:
-                interactive: true
+                interactive: global.sdk_interactive
                 sprite: |
                     function() {
                         if( feature.ref ) {
@@ -264,25 +264,25 @@ styles:
     ux-location-gem-overlay:
         base: points
         mix: icons
-        interactive: true
+        interactive: global.sdk_interactive
         blend: overlay
         blend_order: 2
     ux-icons-overlay:
         base: points
         mix: icons
-        interactive: true
+        interactive: global.sdk_interactive
         blend: overlay
         blend_order: 3
     sdk-point-overlay:
         base: points
         mix: icons
-        interactive: true
+        interactive: global.sdk_interactive
         blend: overlay
         blend_order: 3
     sdk-shield-overlay:
         base: points
         mix: icons
-        interactive: true
+        interactive: global.sdk_interactive
         blend: overlay
         blend_order: 3
     sdk-line-overlay:
