--- a/styles/points.yaml
+++ b/styles/points.yaml
@@ -122,12 +122,12 @@ textures:
             fitness: [804, 42, 36, 36]
             fitness_station: [804, 42, 36, 36]
             florist: [90, 126, 36, 36]
-            forest: [974, 168, 36, 36]
-            natural_forest: [974, 168, 36, 36]
-            nature_reserve: [974, 168, 36, 36]
-            conservation: [974, 168, 36, 36]
-            protected_area: [974, 168, 36, 36]
-            grass: [974, 168, 36, 36]
+            forest: [974, 168, 35, 36]          # this is a hack. Fixing almost everything else, breaks this because it touches the right crop
+            natural_forest: [974, 168, 35, 36]
+            nature_reserve: [974, 168, 35, 36]
+            conservation: [974, 168, 35, 36]
+            protected_area: [974, 168, 35, 36]
+            grass: [974, 168, 35, 36]
             fountain: [224, 126, 36, 36]
             fuel: [884, 168, 36, 36]
             gallery: [574, 168, 36, 36]
