--- a/tron-style.yaml
+++ b/tron-style.yaml
@@ -31,8 +31,8 @@ import:
 # Sources
 sources:
     mapzen:
-        type: TopoJSON
-        url: https://tile.mapzen.com/mapzen/vector/v1/all/{z}/{x}/{y}.topojson
+        type: MVT
+        url: https://tile.mapzen.com/mapzen/vector/v1/all/{z}/{x}/{y}.mvt
         url_params:
             api_key: global.sdk_mapzen_api_key
         rasters: [normals-elevation]
@@ -111,4 +111,4 @@ cameras:
 scene:
     animated: global.sdk_animated
     background:
-        color: black
+        color: '#364d6d'
