--- a/components/globals.yaml
+++ b/components/globals.yaml
@@ -215,8 +215,8 @@ global:
     text_visible_water: true
     text_visible_water_labels: true
     text_visible_roads: true
-    text_visible_building: true
-    text_visible_address: true
+    text_visible_building:          false     # false for default
+    text_visible_address:           false     # false for default
     label_visible_landuse_green: true
     icon_visible_landuse_green: true
     icon_size_green: [[0, '0px']]                       # 0px for no, default, more  [[13, '14px'], [16, '18px'], [18, '19px']]
