* remove default Mapzen API key, a breaking change * fix iD editor link URL construction for ways * bump major version

--- a/components/globals.yaml
+++ b/components/globals.yaml
@@ -1,7 +1,7 @@
 global:
     # Sign up for a Mapzen API key to enjoy higher rate limits
     # https://mapzen.com/documentation/overview/#developer-accounts-and-api-keys
-    sdk_mapzen_api_key: mapzen-ZzW4tEy     # set this value to your Mapzen API key
+    sdk_mapzen_api_key: ''     # set this value to your Mapzen API key
 
     sdk_animated: true
     sdk_interactive: true
